# omega-backup

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  install.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
omega-backup-cli/: Cargo.toml
omega-backup-cli/src/: main.rs  setup.rs
omega-backup-gui/: Cargo.toml
omega-backup-gui/src/: bridge.rs  dashboard.rs  logs.rs  main.rs  operations.rs  server.rs  window.rs
omega-backup-lib/: Cargo.toml
omega-backup-lib/src/: backup.rs  borg.rs  check.rs  config.rs  distribute.rs  init.rs  lib.rs  maintenance.rs  ntfy.rs  reset.rs  restic.rs  restore.rs  status.rs  update.rs  wol.rs
src/: backup.rs  borg.rs  check.rs  config.rs  distribute.rs  init.rs  main.rs  maintenance.rs  ntfy.rs  reset.rs  restore.rs  setup.rs  ssh.rs  status.rs  update.rs  wol.rs
