[package]
name = "omega-backup"
version = "0.2.1"
edition = "2021"

[dependencies]
clap             = { version = "4.5", features = ["derive"] }
serde            = { version = "1.0", features = ["derive"] }
toml             = "0.8"
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono           = { version = "0.4", features = ["serde"] }
anyhow           = "1.0"
thiserror        = "2.0"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dialoguer        = "0.11"
mdns-sd          = "0.11"
axum             = "0.8"
aes-gcm          = "0.10"
rand             = "0.9"
indicatif        = "0.17"
tracing-appender = "0.2"
hkdf             = "0.12"
sha2             = "0.10"
hex              = "0.4"
self_update      = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
serde_json       = "1.0"
dirs             = "5.0"
semver = "1.0.27"

[dev-dependencies]
tempfile = "3"
