[package]
name = "omega-backup-cli"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "omega-backup"
path = "src/main.rs"

[dependencies]
omega-backup-lib = { path = "../omega-backup-lib" }
clap             = { version = "4.5", features = ["derive"] }
dialoguer        = "0.11"
tokio            = { version = "1", features = ["full"] }
anyhow           = "1.0"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs             = "5.0"
rand             = "0.9"
indicatif        = "0.17"
