[package]
name = "omega-backup-gui"
version = "0.6.3"
edition = "2021"

[[bin]]
name = "omega-backup-gui"
path = "src/main.rs"

[dependencies]
omega-backup-lib = { path = "../omega-backup-lib" }
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_7"] }
async-channel = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
